syntax = "proto3";

package categories;
option go_package = "v1/proto";
import "google/protobuf/timestamp.proto";

message Category {
    string name = 1;
    string description = 2;
    bool is_active = 3;
}

message CategoryResponse {
    int64 id = 1;
    string name = 2;
    string description = 3;
    bool is_active = 4;
    google.protobuf.Timestamp created_at = 5;
    google.protobuf.Timestamp updated_at = 6;
}

message CategoryListResponse {
    repeated CategoryResponse categories = 1;
}

message Empty {}

service CategoryService {
    rpc Save(Category) returns (CategoryResponse);
    rpc Find(Empty) returns (CategoryListResponse);
}
